<resources>
    <string name="app_name">CheckPoint</string>
    <string name="title_home">CheckPoint</string>
    <string name="title_saved">Saved</string>
    <string name="title_map">Map</string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="Altitude">ALTITUDE</string>
    <string name="speed">SPEED</string>
    <string name="enter_label">Enter Label</string>
    <string name="create_new">Create New</string>
    <string name="imperial">IMPERIAL</string>
    <string name="save">Save CheckPoint</string>
    <string name="delete">Delete CheckPoint</string>
    <string name="default_value">...</string>
    <string name="click_edit_text">click to edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
